# minarrow

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  build.rs  rust-toolchain.toml
.github/workflows/: features.yaml
benches/: benchmark_parallel_simd.rs  consolidate.rs  hotloop_benchmark_avg_simd.rs  hotloop_benchmark_avg_std.rs  hotloop_benchmark_simd.rs  hotloop_benchmark_std.rs
examples/: apache_arrow_ffi.rs  arithmetic.rs  benchmark_cold_start_avg_simd.sh  benchmark_cold_start_avg_std.sh  datetime_ops.rs  hotloop_benchmark_avg_simd.rs  hotloop_benchmark_avg_std.rs  hotloop_benchmark_simd.rs  hotloop_benchmark_std.rs  parallel_simd.rs  polars_ffi.rs  print_arrays.rs  print_table.rs  selection.rs
examples/benchmarks/: benchmark_parallel_simd.rs  hotloop_benchmark_avg_simd.rs  hotloop_benchmark_avg_std.rs  hotloop_benchmark_simd.rs  hotloop_benchmark_std.rs
examples/broadcasting/: test_broadcasting.rs  test_scalar_arithmetic.rs  test_string_broadcasting.rs  test_value_macros.rs  test_value_ops.rs
examples/ffi/: apache_arrow_ffi.rs  polars_ffi.rs
examples/print/: print_arrays.rs  print_table.rs
pyo3/: Cargo.toml  README.md  build.rs  pyproject.toml
pyo3/examples/: pycapsule_demo.py  pycapsule_exchange.rs  python_roundtrip.rs  run_tests.rs
pyo3/src/: error.rs  lib.rs  tests.rs  types.rs
pyo3/src/ffi/: mod.rs  to_py.rs  to_rust.rs
pyo3/tests/: atomic_tests.rs  python_roundtrip.rs  test_roundtrip.py
src/: aliases.rs  conversions.rs  lib.rs  macros.rs  utils.rs
src/enums/: array.rs  error.rs  operators.rs  scalar.rs  shape_dim.rs  time_units.rs  value.rs
src/enums/collections/: numeric_array.rs  temporal_array.rs  text_array.rs
src/enums/value/: conversions.rs  impls.rs  mod.rs
src/ffi/: arrow_c_ffi.rs  arrow_dtype.rs  schema.rs
src/kernels/: string.rs
src/kernels/arithmetic/: dispatch.rs  mod.rs  simd.rs  std.rs  string.rs  string_ops.rs  types.rs
src/kernels/bitmask/: dispatch.rs  mod.rs  simd.rs  std.rs
src/kernels/broadcast/: array.rs  array_view.rs  cube.rs  field_array.rs  matrix.rs  mod.rs  scalar.rs  super_array.rs  super_array_view.rs  super_table.rs  super_table_view.rs  table.rs  table_view.rs
src/kernels/routing/: arithmetic.rs  binary_map.rs  broadcast.rs  mod.rs
src/structs/: allocator.rs  arena.rs  bitmask.rs  buffer.rs  column.rs  cube.rs  field.rs  field_array.rs  matrix.rs  table.rs  vec64.rs
src/structs/chunked/: super_array.rs  super_table.rs
src/structs/shared_buffer/: memfd.rs  mod.rs
src/structs/shared_buffer/internal/: owned.rs  pvec.rs  vtable.rs
src/structs/variants/: boolean.rs  categorical.rs  datetime.rs  float.rs  integer.rs  string.rs
src/structs/variants/datetime/: datetime_ops.rs  mod.rs  tz.rs
src/structs/views/: array_view.rs  bitmask_view.rs  table_view.rs
src/structs/views/chunked/: super_array_view.rs  super_table_view.rs
src/structs/views/collections/: boolean_array_view.rs  numeric_array_view.rs  temporal_array_view.rs  text_array_view.rs
src/traits/: byte_size.rs  concatenate.rs  consolidate.rs  custom_value.rs  datetime_ops.rs  masked_array.rs  print.rs  selection.rs  shape.rs  type_unions.rs  view.rs
tests/: apache_arrow.rs  arrow_c_integration.rs  c_inspect_arrow.c  polars.rs  test_selection.rs
