[package]
name = "minarrow-pyo3"
version = "0.1.0"
edition = "2024"
authors = ['Peter G. Bower']
license = "MIT"
readme = "README.md"
repository = "https://github.com/pbower/minarrow"
documentation = "https://docs.rs/minarrow-pyo3/"
keywords = [
    "arrow",
    "apache-arrow",
    "pyo3",
    "python",
    "ffi",
]
categories = ["external-ffi-bindings", "api-bindings"]
description = "PyO3 bindings for MinArrow - zero-copy Arrow interop with Python via PyArrow"

[workspace]

[lib]
name = "minarrow_pyo3"
crate-type = ["cdylib", "rlib"]

[dependencies]
minarrow = { path = "..", features = ["large_string"] }
pyo3 = { version = "0.23" }
thiserror = "2"

[features]
default = ["datetime", "extended_numeric_types", "extended_categorical"]
extension-module = ["pyo3/extension-module"]
datetime = ["minarrow/datetime"]
extended_numeric_types = ["minarrow/extended_numeric_types"]
extended_categorical = ["minarrow/extended_categorical"]
table_metadata = ["minarrow/table_metadata"]

[build-dependencies]
pyo3-build-config = "0.23"

[[example]]
name = "pycapsule_exchange"
path = "examples/pycapsule_exchange.rs"

