[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "minarrow-pyo3"
version = "0.1.0"
description = "PyO3 bindings for MinArrow - zero-copy Arrow interop with Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Peter G. Bower" }
]
keywords = ["arrow", "apache-arrow", "columnar", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.20",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "minarrow_pyo3"
